--- a/.gitmodules
+++ b/.gitmodules
@@ -1,12 +1,13 @@
-[submodule "Hazel/vendor/GLFW"]
-	path = Hazel/vendor/GLFW
+
+[submodule "BraveFish/vendor/glm"]
+	path = BraveFish/vendor/glm
+	url = https://github.com/Groovounet/glm
+[submodule "BraveFish/vendor/GLFW"]
+	path = BraveFish/vendor/GLFW
 	url = https://github.com/jun-nda/glfw
-[submodule "Hazel/vendor/spdlog"]
-	path = Hazel/vendor/spdlog
+[submodule "BraveFish/vendor/imgui"]
+	path = BraveFish/vendor/imgui
+	url = https://github.com/jun-nda/imgui
+[submodule "BraveFish/vendor/spdlog"]
+	path = BraveFish/vendor/spdlog
 	url = https://github.com/gabime/spdlog
-[submodule "Hazel/vendor/glm"]
-	path = Hazel/vendor/glm
-	url = http://github.com/g-truc/glm
-[submodule "Hazel/vendor/imgui"]
-	path = Hazel/vendor/imgui
-	url = http://github.com/jun-nda/imgui
